# refinator-impl

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compile.sh  compute_transform.py
benchmarks/amp/: source.c  source.ll
benchmarks/carrays/: carrays.h  source.c  source.ll
benchmarks/jccc/: source.c  source.ll
benchmarks/leftpad/: source.c  source.ll
benchmarks/nandc/: source.c  source.ll
benchmarks/rbtree/: source.c  source.ll
benchmarks/running-example/: source.c  source.ll
benchmarks/tisp/: source.c  source.ll  tisp.c  tisp.h
benchmarks/tisp/tib/: core.c  io.c  math.c  string.c
benchmarks/ulidgen/: source.c  source.ll
manual-translations/amp/: inferred.rs
manual-translations/leftpad/: inferred.rs  manual.rs
manual-translations/nandc/: inferred.rs  manual.rs
manual-translations/rbtree/: manual.rs
manual-translations/running-example/: manual.rs
manual-translations/ulidgen/: inferred.rs  manual.rs
src/: analysis.rs  constraints.rs  format.rs  lang.rs  lib.rs  main.rs  results.rs
src/analysis/: control_flow.rs  drop.rs  live_variables.rs  local_typelabs.rs  path.rs  rvals.rs  typelab_pairs.rs
src/benchmark/: benchmark.rs
src/constraints/: borrowing.rs  consistency.rs  context.rs  datatypes.rs  functions.rs  lifetimes.rs  loans.rs  optimality.rs  relations.rs  semantic.rs
src/format/: function.rs  global_var.rs  instruction.rs  program.rs  struct.rs  types.rs
src/lang/: basic_block.rs  function.rs  instruction.rs  program.rs  struct.rs  stype.rs  variable.rs
src/results/: lifetime.rs  rtype.rs
(+40 files in other folders)
